Add design branch, changed base.html,base.css in design

--- a/fablwriter/static/layout/styles/base.css
+++ b/fablwriter/static/layout/styles/base.css
@@ -1,4 +1,34 @@
-ul {
+body{
+  margin:0px;
+}
+.header{
+  margin: 0;
+  position: absolute;
+  top:3%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
+}
+.logoimg {
+  float:left;
+  height:100%;
+  width:auto;
+  display:inline-block;
+  height:47px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.nav {
+  height: 47px;
+  text-decoration: none;
+  align-items: center;
+  overflow: hidden;
+  float: center;
+}
+
+nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -6,24 +36,26 @@ ul {
   background-color:  #86d7bd;
 }
 
-li {
+nav li {
   float: right;
 }
 
-li a, .dropbtn {
+nav li a, .dropbtn {
   display: inline-block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 20px;
+  font-family: 'Mystery Quest', cursive;
+
 }
 
-li a:hover, .dropdown:hover .dropbtn {
+nav li a:hover, .dropdown:hover .dropbtn {
   background-color: #77a8a8;
 }
 
-li.dropdown {
+nav li.dropdown {
   display: inline-block;
 }
 
@@ -52,27 +84,10 @@ li.dropdown {
   display: block;
 }
 
-li a:hover:not(.active) {
+nav li a:hover:not(.active) {
   background-color: #77a8a8;
 }
 
 /*.active {
   background-color: #639c9c;
 }*/
-img {
-  height:47px;
-  width:auto;
-  display:inline-block;
-}
-
-.logoimg {
-  float:left;
-  height:100%;
-  width:auto;
-  display:inline-block;
-}
-
-.nav {
-  height: 47px;
-  text-decoration: none;
-}
