--- a/fablwriter/templates/base.html
+++ b/fablwriter/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 {% load static %}
 {% load i18n %}
-  <link rel="stylesheet" href="{% static 'layout/styles/base.css'%}" type="text/css" />
+  <link rel="stylesheet" href="{% static 'layout/styles/newbase.css'%}" type="text/css" />
   <head>
     <meta charset="utf-8">
     <title>{% block title %} Default Title {% endblock %}</title>
@@ -39,7 +39,7 @@
           </ul>
       </nav>
     </div>
-    
+
     <div class="blockcontent">
     {% block content %}
       #Contents goes in
