--- a/fablwriter/templates/base.html
+++ b/fablwriter/templates/base.html
@@ -2,9 +2,21 @@
 <html>
 {% load static %}
 {% load i18n %}
-  <link rel="stylesheet" href="{% static 'layout/styles/newbase.css'%}" type="text/css" />
+
+<!-- Stylesheets  -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="{% static 'layout/styles/newbase.css'%}" type="text/css" />
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>{% block title %} Default Title {% endblock %}</title>
     {% block headblock %}{% endblock %}
     <script>{% block script %}{% endblock %}</script>
@@ -15,30 +27,41 @@
   <body>
     <div class=header>
     <div class="logoimg"><img src="{% static "images/logo.png" %}"><br>
-    <nav class = nav>
-          <ul>
-          {% if user.is_authenticated %}
-            <li class="dropdown">
-              <a href="javascript:void(0)" class="dropbtn">Hello {{ user.username }}!</a>
-              <div class="dropdown-content">
-                <a href="{% url 'profile' %}">{% trans 'Profile' %}</a>
-                <a href="{% url 'logout'%}">{% trans 'Logout' %}</a>
-              </div>
-            </li>
-          {% endif %}
-          {% if user.is_authenticated %}
-            <li><a href="{% url 'create' %}">{% trans 'Create' %}</a></li>
-          {% else %}
-            <li><a href="{% url 'login' %}">{% trans 'Login' %}</a></li>
-            <li><a href="{% url 'signup' %}">{% trans 'Signup' %}</a></li>
-          {% endif %}
-            <li><a href="{% url 'about' %}">{% trans 'About' %}</a></li>
-            <li><a href="{% url 'home' %}">{% trans 'Home' %}</a></li>
-
-            </a></div>
-          </ul>
+      <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <ul class="nav navbar-nav">
+                <li class="active">
+                  <a href="{% url 'home' %}">{% trans 'Home' %}</a>
+                </li>
+                <li>
+                  <a href="{% url 'about' %}">{% trans 'About' %}</a>
+                </li>
+                {% if user.is_authenticated %}
+                  <li><a href="{% url 'create' %}">{% trans 'Create' %}</a></li>
+                {% else %}
+                  <li><a href="{% url 'login' %}">{% trans 'Login' %}</a></li>
+                  <li><a href="{% url 'signup' %}">{% trans 'Signup' %}</a></li>
+                {% endif %}
+                {% if user.is_authenticated %}
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Hello {{ user.username }}!
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                          <a href="{% url 'profile' %}">{% trans 'Profile' %}</a>
+                        </li>
+                        <li>
+                          <a href="{% url 'logout'%}">{% trans 'Logout' %}</a>
+                        </li>
+                    </ul>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
       </nav>
-    </div>
+
+
 
     <div class="blockcontent">
     {% block content %}
