Bootstrapped navbar in 'design' branch

--- a/fablwriter/static/layout/styles/newbase.less
+++ b/fablwriter/static/layout/styles/newbase.less
@@ -4,12 +4,16 @@
 //With help we can write nicer codes together. <3
 
 /*Using less files
-
--If you are make sure about node.js has installed
+Downloading
+-If you are make sure about node.js has installed.
   in terminal write : npm install -g less
 -else
   to install node.js : https://nodejs.org/en/download/package-manager/
 -end if
+Compiling
+-If you are in the folder of .less file
+  in terminal, just write : lessc newbase.less newbase.css
+*/
 
 @nav-back-color: #86d7bd;
 @nav-back-color-active: #77a8a8;
