--- a/fablwriter/templates/base.html
+++ b/fablwriter/templates/base.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div class="logoimg"><img src="{% static "images/logo.png" %}"><br>
-      <nav class="navbar ">
+      <nav class="navbar">
         <div class="container-fluid">
             <ul class="nav navbar-nav">
                 <li class="active">
@@ -43,21 +43,23 @@
                   <li><a href="{% url 'signup' %}">{% trans 'Signup' %}</a></li>
                 {% endif %}
                 {% if user.is_authenticated %}
-                <li class="dropdown">
+                <li class="dropdown dropdown-content">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >
                       Hello {{ user.username }}!
                       <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li>
-                          <a href="{% url 'profile' %}">{% trans 'Profile' %}</a>
-                        </li>
-                        <li>
-                          <a href="{% url 'logout'%}">{% trans 'Logout' %}</a>
-                        </li>
+                        <li><a href="{% url 'profile' %}">{% trans 'Profile' %}</a></li>
+                        <li><a href="{% url 'logout'%}">{% trans 'Logout' %}</a></li>
                     </ul>
                 </li>
                 {% endif %}
+
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a navbar-brand href="https://github.com/lyk2018-python/fabl-writer">
+                <img src="{% static "images/github_navbar.png" %}" width="18" height="18" alt="">
+              </a></li>
             </ul>
         </div>
       </nav>
@@ -68,14 +70,5 @@
     {% endblock %}
     </div>
 
-<script>
-$(document).ready(function(){
-  $('.dropdown-menu a.test').on("click", function(e){
-    $(this).next('ul').toggle();
-    e.stopPropagation();
-    e.preventDefault();
-  });
-});
-</script>
   </body>
 </html>
