--- a/fablwriter/templates/base.html
+++ b/fablwriter/templates/base.html
@@ -58,7 +58,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a navbar-brand href="https://github.com/lyk2018-python/fabl-writer">
-                <img src="{% static "images/github_navbar.png" %}" width="18" height="18" alt="">
+                <img src="{% static "images/github-logo.svg" %}" width="18" height="18" alt="">
               </a></li>
             </ul>
         </div>
